--- a/style.css
+++ b/style.css
@@ -105,25 +105,26 @@ section{
   width: 26%;
   float: left;
   padding-top: 9%;
-  padding-left: 6%;
+  padding-left: 5%;
  
 }
 .work img{
-  width: 90%;
+  width: 100%;
   border-radius: 5px;
   box-shadow: 5px 10px 5px #FF9100;
 }
 
 .ct{
-  background-color: #FF9100 ;
+  background-color: black ;
   height: 150vh;
   margin-bottom: -2%;
  }
 
  .ct img{
+
   width: 100%;
   border-radius: 5px;
-  box-shadow: 5px 10px 5px black;
+  box-shadow: 5px 10px 5px blue;
 }
 
 
@@ -167,7 +168,7 @@ section{
 
 .wd2{
   background-color: black ;
-  height: 84vh;
+  height: 83vh;
  }
 
  .wd2 .width{
@@ -187,7 +188,7 @@ section{
 
 .wd3{
   background-color: white ;
-  height: 80vh;
+  height: 82vh;
  }
 
  .wd3 .width{
@@ -207,7 +208,7 @@ section{
 
 .wd4{
   background-color: black ;
-  height: 60vh;
+  height: 56vh;
  }
 
  .wd4 .width{
@@ -225,8 +226,8 @@ section{
 
 
 .wd5{
-  background-color: black ;
-  height: 100vh;
+  background-color: white ;
+  height: 96vh;
  }
 
  .wd5 .width{
@@ -239,13 +240,14 @@ section{
  .wd5 img{
   width: 100%;
   border-radius: 5px;
-  box-shadow: 5px 10px 5px #FF9100;
+  box-shadow: 5px 10px 5px black;
 }
 
 
 .wd6{
-  background-color: white ;
-  height: 86vh;
+  background-color: black ;
+  height: 85vh;
+  margin-bottom: -2%;
  }
 
  .wd6 .width{
@@ -253,18 +255,18 @@ section{
   float: left;
   padding-top: 6%;
   padding-left: 6%;
- }
+ }  
 
  .wd6 img{
   width: 100%;
   border-radius: 5px;
-  box-shadow: 5px 10px 5px black;
+  box-shadow: 5px 10px 5px #FF9100;
 }
 
 
 .bg{
-  background-color: black ;
-  height: 99vh;
+  background-color: white ;
+  height: 100vh;
   margin-bottom: -2%;
  }
 
@@ -278,13 +280,13 @@ section{
  .bg img{
   width: 100%;
   border-radius: 5px;
-  box-shadow: 5px 10px 5px  #FF9100;
+  box-shadow: 5px 10px 5px  black;
 }
 
 
 .cu{
   background-color: black ;
-  height: 110vh;
+  height: 112vh;
   margin-bottom: -4%;
  }
 
@@ -300,11 +302,11 @@ section{
   border-radius: 5px;
 
 }
- .cu .width1{
-  width: 20%;
-  float: left;
-  padding-left: 3%;
- }
+
+.cu .ig{
+  width: 10%;
+  border-radius: 5px;
+}
 
 
 
